# pyheatshrink

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  benchmark.py  heatshrink.c  pytests.py  requirements.txt  setup.py  tests.py
bench/: benchmark.py
ctests/: CMakeLists.txt  test_dynamic_arrays.c
heatshrink/: __init__.py  _heatshrink.pxd  core.c  core.pyx  heatshrink.c  heatshrink.pyx  io.py  streams.py
pytests/: benchmark.py  test_encoder.py
scripts/: benchmark.py
scripts/data/: .gitignore
src/: CMakeLists.txt  cheatshrink.pxd  common.h  dynamic_arrays.c  dynamic_arrays.h  heatshrink.c  heatshrink.pyx  utils.h
tests/: CMakeLists.txt  constants.py  dynamic_arrays_test.c  test_core.py  test_dynamic_arrays.c  test_streams.py  utils.py
